Update app/core/src/test/java/stirling/software/SPDF/controller/api/MergeControllerTest.java
Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>